[tool.poetry]
name = "coen346-mmu"
version = "0.1.0"
description = "a memory manager unit simulation"
authors = ["minhtrannhat <minhtrannhat@minhtrannhat.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
